--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.4",
